--- a/Classification Model.ipynb
+++ b/Classification Model.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -16,6 +23,13 @@
     "from sklearn import metrics\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.metrics import roc_curve, auc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading dataset"
    ]
   },
   {
